src/test/ui/duplicate/dupe-symbols-3.stderr
error: symbol `fail` is already defined
  --> $DIR/dupe-symbols-3.rs:10:1
   |
LL | / pub fn fail() {
LL | |
LL | | }
   | |_^

error: aborting due to previous error

